--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <section class="header" id="js-header">
         <a href=""><img src="logo.png" alt=""></a>
+        <div>
             <ul class="navbar" id="js-navbar">
                 <li><a href="">Home</a></li>
                 <li><a href="">Shop</a></li>
@@ -21,6 +22,10 @@
                 <li><a href="">Contact</a></li>
                 <li><a href=""><i class="far fa-shopping-bag"></i></a></li>
             </ul>
+        </div>
+        <div class="hamburger">
+            <i id="bar" class="fas fa-outdent"></i>
+            <a href=""><i class="far fa-shopping-bag"></i></a>
         </div>
     </section>
     
