--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
                 <li><a href=""><i class="far fa-shopping-bag"></i></a></li>
             </ul>
         </div>
-        <div class="hamburger">
-            <i id="bar" class="fas fa-outdent"></i>
-            <a href=""><i class="far fa-shopping-bag"></i></a>
-        </div>
+        
     </section>
     
     <section class="hero" id="js-hero">
@@ -409,6 +406,7 @@
     </section>
 
     <section class="discout">
+       <div class="container">
         <div class="discount-off">
             <img src="img/banner/big-sale-up-to-30-percent-off-all-sale-styles-in-stores-and-online-special-offer-sale-30-percent-number-tag-voucher-illustration-free-vector.jpg" alt="">
         </div>
@@ -518,6 +516,7 @@
                 </div>
             </div>
         </div>
+       </div>
     </section>
 
     <section class="footer">
